@@ -7,6 +7,8 @@
     * Updated help files
     * Fixed a bug in timerTick
     * Fixed a bug that deals non-ASCII characters wrong.
+    * Removed the trigger in keyDown in PTYSession.
+    * Added an icon in Tab when a bell is received.
     
 2003-02-22	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
